<resources>
    <string name="app_name">My Ukulele Songs</string>

    <!--Generic-->
    <string name="generic_ok">OK</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_reset">Reset</string>
    <string name="generic_restore">Restore</string>

    <!--Loading Activity-->
    <string name="loading_activity_text_syncing">Synchronizing songs…</string>

    <!--Main Activity-->
    <string name="songs_activity_menu_search">Search</string>
    <string name="songs_activity_menu_add">Add Song</string>
    <string name="songs_activity_menu_randomize">Randomize</string>
    <string name="songs_activity_menu_settings">Settings</string>
    <string name="songs_activity_toast_no_songs">You have no songs</string>
    <string name="songs_activity_hint_search">Search</string>

    <!--Songs Fragment-->
    <string name="songs_fragment_title">Library</string>

    <!--Chords Fragment-->
    <string name="chords_fragment_title">Chords</string>
    <string name="chords_fragment_text_hint">- Press a chord to play it\n- Long press a chord to see the chart</string>

    <!--Virtual Uke Fragment-->
    <string name="virtual_uke_fragment_title">Virtual Uke</string>
    <string name="virtual_uke_fragment_text_hint">- With your left thumb press and hold a string\n- With your right thumb tap anywhere on the string to make a sound</string>

    <!--Add Edit Song Activity-->
    <string name="add_edit_song_activity_text_add_song">Add Song</string>
    <string name="add_edit_song_activity_text_edit_song">Edit Song</string>
    <string name="add_edit_song_activity_hint_title">Title</string>
    <string name="add_edit_song_activity_hint_author">Author</string>
    <string name="add_edit_song_activity_hint_strumming_patterns">Strumming patterns</string>
    <string name="add_edit_song_activity_hint_picking_patterns">Picking patterns</string>
    <string name="add_edit_song_activity_hint_chords">Chords</string>
    <string name="add_edit_song_activity_hint_tab">Tab</string>
    <string name="add_edit_song_activity_text_original_key">Original key:</string>
    <string name="add_edit_song_activity_text_select_key">Select Key</string>
    <string name="add_edit_song_activity_text_strumming">Strumming</string>
    <string name="add_edit_song_activity_text_picking">Picking</string>
    <string name="add_edit_song_activity_text_strumming_picking">Both</string>
    <string name="add_edit_song_activity_menu_save">Save</string>
    <string name="add_edit_song_activity_menu_edit">Edit</string>
    <string name="add_edit_song_activity_menu_delete">Delete</string>
    <string name="add_edit_song_activity_toast_empty_title">Please type in a song title</string>
    <string name="add_edit_song_activity_dialog_delete_song_title">Delete song</string>
    <string name="add_edit_song_activity_dialog_delete_song_description">Are you sure you want to delete this song?</string>
    <string name="add_edit_song_activity_button_clear">Clear</string>

    <!--Song Activity-->
    <string name="song_activity_menu_edit">Edit</string>
    <string name="song_activity_menu_auto_scroll">Auto Scroll</string>
    <string name="song_activity_menu_transpose">Transpose</string>
    <string name="song_activity_menu_export_mus">Export .mus</string>
    <string name="song_activity_menu_export_txt">Export .txt</string>
    <string name="song_activity_menu_customize">Customize</string>
    <string name="song_activity_text_key">Key</string>
    <string name="song_activity_text_original_key">Original</string>
    <string name="song_activity_text_chords">Chords</string>
    <string name="song_activity_text_strumming_patterns">Strumming\npatterns</string>
    <string name="song_activity_text_picking_patterns">Picking\npatterns</string>
    <string name="song_activity_text_export_with">Export with…</string>

    <!--Customize Song Activity-->
    <string name="customize_song_activity_title_chords">Customize Chords Song</string>
    <string name="customize_song_activity_title_tab">Customize Tab Song</string>
    <string name="customize_song_activity_menu_reset">Reset</string>
    <string name="customize_song_activity_text_text_size">Text size</string>
    <string name="customize_song_activity_text_text_color">Text color</string>
    <string name="customize_song_activity_text_chord_color">Chord color</string>
    <string name="customize_song_activity_text_header_color">Header color</string>
    <string name="customize_song_activity_text_line_color">Line color</string>
    <string name="customize_song_activity_text_numbers_color">Numbers color</string>
    <string name="customize_song_activity_text_background_color">Background color</string>
    <string name="customize_song_activity_dialog_reset_title">Reset customizations</string>
    <string name="customize_song_activity_dialog_reset_description">Are you sure you want to reset customizations to default settings?</string>

    <!--Settings Activity-->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_activity_text_sharing">SHARING</string>
    <string name="settings_activity_text_import_title">Import Song</string>
    <string name="settings_activity_text_import_description">Import a song from a .mus file</string>
    <string name="settings_activity_text_backup_restore">BACKUP/RESTORE</string>
    <string name="settings_activity_text_backup_title">Backup</string>
    <string name="settings_activity_text_backup_description">Create a backup file</string>
    <string name="settings_activity_text_restore_title">Restore</string>
    <string name="settings_activity_text_restore_description">Import songs from a backup file</string>
    <string name="settings_activity_text_cloud_sync">CLOUD SYNC</string>
    <string name="settings_activity_text_drive_sync_title">Sync with Google Drive</string>
    <string name="settings_activity_text_drive_sync_description">Use Google Drive to create a cloud backup and synchronize your songs across multiple devices</string>
    <string name="settings_activity_text_customization">CUSTOMIZATION</string>
    <string name="settings_activity_text_prefer_sharp_title">Sharp / Flat preference</string>
    <string name="settings_activity_text_prefer_sharp_description">Will display sharp(A#) notes or flat(Bb) notes</string>
    <string name="settings_activity_toggle_sharp">Sharp</string>
    <string name="settings_activity_toggle_flat">Flat</string>
    <string name="settings_activity_text_general_settings">GENERAL SETTINGS</string>
    <string name="settings_activity_text_rate_app">Rate the app</string>
    <string name="settings_activity_text_feedback">Feedback</string>
    <string name="settings_activity_text_about">ABOUT</string>
    <string name="settings_activity_text_privacy_policy">Privacy policy</string>
    <string name="settings_activity_text_version">Version</string>
    <string name="settings_activity_dialog_restore_songs_title">Warning!</string>
    <string name="settings_activity_dialog_restore_songs_description">This will delete your songs and import songs from a backup file. Are you sure you want to restore?</string>
    <string name="settings_activity_toast_backup_error">Backup error</string>
    <string name="settings_activity_toast_no_file_picker">No file picker app available on the device</string>
    <string name="settings_activity_toast_import_error">Import error</string>
    <string name="settings_activity_toast_not_mus_file">Not a mus file</string>
    <string name="settings_activity_toast_permission_needed">Permission needed to import songs</string>
    <string name="settings_activity_toast_song_imported">%d song imported</string>
    <string name="settings_activity_toast_songs_imported">%d songs imported</string>
    <string name="settings_activity_toast_no_email_app">No email app available on the device</string>
    <string name="settings_activity_toast_login_success">Connected to Google Drive</string>
    <string name="settings_activity_toast_login_failed">Failed to connect to Google Drive</string>
    <string name="settings_activity_feedback_subject">My Ukulele Songs Feedback</string>
    <string name="settings_activity_feedback_chooser">Send feedback using…</string>

    <!--Chord Activity-->
    <string name="chord_activity_text_diagram">Diagram</string>
    <string name="chord_activity_text_alternative">Alternatives</string>

    <!--Create Song Dialog-->
    <string name="create_song_dialog_text_title">Select song type</string>
    <string name="create_song_dialog_text_chords">Chords</string>
    <string name="create_song_dialog_text_tab">Tab</string>

</resources>
