<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_song"
        android:icon="@drawable/icon_search"
        android:title="@string/songs_activity_menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_song"
        android:icon="@drawable/icon_plus"
        android:title="@string/songs_activity_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_randomize"
        android:title="@string/songs_activity_menu_randomize"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_settings"
        android:title="@string/songs_activity_menu_settings"
        app:showAsAction="never" />-->
</menu>
